--- a/public/less/colours.less
+++ b/public/less/colours.less
@@ -3,6 +3,7 @@
 
 @dark-green: #67C1C0;
 @light-green: #83E2E1;
+@bg-green: #B0d4d5;
 @dark-red: #EC515B;
 @light-red: #F4969C;
 @lightest-grey: #F5F3F4;
