--- a/views/about.html
+++ b/views/about.html
@@ -45,22 +45,28 @@
           </ol>
         </div>
       </div>
-      <div class="row">
+      <div class="row document-link">
         <div class="col-md-4 text-center">
+          <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess">
+            <img src="img/StudioMofo_EtherpadIcon.png" alt="Etherpad icon" />
+          </a>
           <p>
-            <i class="fa fa-file-text-o"></i>
             <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess">Project Process</a>
           </p>
         </div>
         <div class="col-md-4 text-center">
+          <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcessTemplate">
+            <img src="img/StudioMofo_EtherpadIcon.png" alt="Etherpad icon" />
+          </a>
           <p>
-            <i class="fa fa-file-text-o"></i>
             <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcessTemplate">Project Scoping Form</a>
           </p>
         </div>
         <div class="col-md-4 text-center">
+          <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica">
+            <img src="img/StudioMofo_EncyclopediaBestpracticaIcon.png" alt="Wiki icon" />
+          </a>
           <p>
-            <i class="fa fa-file-text-o"></i>
             <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica">Encylopedia Bestpractica</a>
           </p>
         </div>
@@ -103,6 +109,13 @@
             <div class="avatar"><img src="img/sabrina.jpg" alt="Photo of Sabrina Ng"></div>
             <h1 class="name">Sabrina Ng</h1>
             <p class="title">Designer</p>
+          </div>
+        </div>
+        <div class="row favourite">
+          <div class="col-md-6 col-md-offset-3">
+            <p>
+              Sabrina likes learning <a href="http://axevancouver.com/">capoeira & dance</a> when there is time and enjoys <a href="http://www.youtube.com/user/2NE1">music</a> she doesn’t understand. Zebras are the bomb.
+            </p>
           </div>
         </div>
       </div>
