--- a/views/layout.html
+++ b/views/layout.html
@@ -42,7 +42,7 @@
       <div class="row">
         <div class="col-md-4">
           <div id="mozilla-wordmark">
-            <img src="img/mozilla_wordmark_white.png" alt="Mozilla wordmark" />
+            <a href="http://www.mozilla.org/"><img src="img/mozilla_wordmark_white.png" alt="Mozilla wordmark" /></a>
           </div>
         </div>
         <div class="col-md-8">
