--- a/views/resources.html
+++ b/views/resources.html
@@ -24,6 +24,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
+          <div class="text-center">
+            <img src="img/StudioMofo_EncyclopediaBestpracticaIcon.png" alt="Wiki icon" />
+          </div>
           <ul>
             <li>
               <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#Engagement_Team-_Who_We_Are_.26_How_We_Work"><i class="fa fa-file-text-o"></i>The Engagement Team: Who we are and how we work</a>
