--- a/public/less/style.less
+++ b/public/less/style.less
@@ -14,21 +14,6 @@
 // Calendar Viz stylesheet
 @import "calendar-viz";
 
-/*@body-blue: #E8F3F8;
-
-@dark-green: #67C1C0;
-@light-green: #83E2E1;
-@dark-red: #EC515B;
-@light-red: #F4969C;
-@lightest-grey: #F5F3F4;
-@light-grey: #999;
-@middle-grey: #7996A9;
-@dark-grey: #494F5B;
-
-
-@light-link: #B3D9F2;*/
-
-
 body{
   background: #FFF;
   color: @dark-grey;
@@ -64,7 +49,7 @@ h2 {
 }
 
 a {
-  color: @dark-green;
+  color: #66b2e2;
 }
 
 .row {
@@ -140,7 +125,6 @@ nav#studiomofo-nav {
 }
 
 .big-section .header {
-  background: #FFF;
   padding-top: 22px;
   padding-bottom: 12px;
   margin-top: 0;
@@ -201,16 +185,13 @@ nav#studiomofo-nav {
 }
 
 #form-section {
-  background: @middle-grey;
-  color: #FFF;
-  a {
-    color: @light-link;
-  }
+  background: @bg-green;
+
   .header {
     background: transparent;
-    color: #FFF;
   }
   #request-form {
+    color: #FFF;
     .form-control {
       margin-bottom: 5px;
     }
@@ -254,8 +235,13 @@ nav#studiomofo-nav {
 */
 
 #how-we-work {
-  i.fa {
-    font-size: 20px;
+  img {
+    width: 100%;
+    max-width: 100px;
+    margin-bottom: 10px;
+  }
+  .row.document-link {
+    margin-top: 30px;
   }
 }
 
@@ -264,6 +250,7 @@ nav#studiomofo-nav {
 }
 
 #who-we-are {
+  /*background: @bg-green;*/
   .member .row {
     margin-top: 0;
     margin-bottom: 0;
@@ -279,7 +266,7 @@ nav#studiomofo-nav {
   .member {
     .text-center;
   }
-  .member:nth-child(odd) {
+/*  .member:nth-child(odd) {
     background: @lightest-grey;
   }
   .member:nth-child(even) {
@@ -288,7 +275,7 @@ nav#studiomofo-nav {
     a {
       color: @light-link;
     }
-  }
+  }*/
   .intro.row {
     padding-bottom: 10px;
   }
@@ -339,7 +326,7 @@ nav#studiomofo-nav {
 }
 
 #portfolio {
-  background: @middle-grey;
+  background: @bg-green;
   .project {
     .text-center;
     margin-bottom: 30px;
@@ -388,5 +375,8 @@ nav#studiomofo-nav {
   ul {
     list-style-type: none;
     padding-left: 0;
+  }
+  img {
+    margin-bottom: 20px;
   }
 }
