Clean up old code

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -223,9 +223,9 @@ nav#studiomofo-nav {
 
 
 #thank-you-message,
-#error-message{
-  font-size: 20px;
+#error-message {
   margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 
