--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -2,13 +2,14 @@
 
 {% block bodyOpen %}<body class="home">{% endblock %}
 {% block mainContent %}
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4 text-center">
-        <p id="thank-you-message">
-          Thanks, {{theName}}! <br />
-          We'll be in touch soon to discuss your project.
-        </p>
+  <div class="big-section" id="thank-you-message">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 text-center">
+            <h1>Thanks, {{theName}}! </h1>
+            <h2>We'll be in touch soon to discuss your project.</h2>
+          </p>
+        </div>
       </div>
     </div>
   </div>
