--- a/views/error.html
+++ b/views/error.html
@@ -2,10 +2,13 @@
 
 {% block bodyOpen %}<body class="home">{% endblock %}
 {% block mainContent %}
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4 text-center">
-        <p id="error-message">Error encountered. <br /> =( </p>
+  <div class="big-section" id="error-message">
+    <div class="container">
+      <div class="row header">
+        <div class="col-md-6 col-md-offset-3 text-center">
+          <h1>Oops!</h1>
+          <h2>Error encountered. </h2>
+        </div>
       </div>
     </div>
   </div>
