--- a/public/less/style.less
+++ b/public/less/style.less
@@ -75,6 +75,9 @@ nav#studiomofo-nav {
     }
     a {
       color: inherit;
+      @media (max-width: @screen-xs-max ){
+        line-height: 70px;
+      }
     }
     a:hover {
       color: inherit;
