--- a/views/index.html
+++ b/views/index.html
@@ -28,12 +28,14 @@
       </div>
     </div>
     <div class="row" id="viz">
-      <div id="left-container">
+      <div class="centered-container">
+        <!-- left container ===  -->
+        <div id="left-container">
         <div id="description-box">
           <h4 id="event-title"></h4>
           <ul id="event-details">
-            <li><i class="fa fa-arrow-right fa-5"></i></li>
-            <li>Click on the dots to read more information about each event.</li>
+            <li class="desktop-instruction"><i class="fa fa-arrow-right fa-5"></i></li>
+            <li class="desktop-instruction">Click on the dots to read more information about each event.</li>
             <li>Expand or minimize each engagement tier by clicking the tier number in the first column.</li>
             <li>To add your event to this calendar, <a href="mailto: hannah@mozillafoundation.org">email Hannah Kane</a>.</li>
           </ul>
@@ -57,27 +59,29 @@
               Project or region-specific communication, freely employed at the discretion of each team.
             </li>
           </ul>
-        </div>
-      </div>
-      <div id="right-container">
-        <div id="viz-container">
-          <div id="calendar-viz-tier">
           </div>
-          <table id="calendar-viz">
-            <thead>
-              <tr>
-                <th colspan="13">
-                  <div id="mozilla-arc" class="arc">Mozilla</div>
-                  <div id="privacy-arc-1" class="arc">Privacy</div>
-                  <div id="education-arc" class="arc">Education</div>
-                  <div id="privacy-arc-2" class="arc">Privacy</div>
-                  <div id="eoy-arc" class="arc">EOY</div>
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
+        </div>
+        <!-- right container ===  -->
+        <div id="right-container">
+          <div id="viz-container">
+            <div id="calendar-viz-tier">
+            </div>
+            <table id="calendar-viz">
+              <thead>
+                <tr>
+                  <th colspan="13">
+                    <div id="mozilla-arc" class="arc">Mozilla</div>
+                    <div id="privacy-arc-1" class="arc">Privacy</div>
+                    <div id="education-arc" class="arc">Education</div>
+                    <div id="privacy-arc-2" class="arc">Privacy</div>
+                    <div id="eoy-arc" class="arc">EOY</div>
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
