--- a/views/layout.html
+++ b/views/layout.html
@@ -40,12 +40,12 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-6">
           <div id="mozilla-wordmark">
             <a href="http://www.mozilla.org/"><img src="img/mozilla_wordmark_white.png" alt="Mozilla wordmark" /></a>
           </div>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 col-sm-6">
           <div id="note">
             made with <i class="fa fa-heart f3"></i> by Studio Mofo
           </div>
