--- a/views/about.html
+++ b/views/about.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="row document-link">
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 col-sm-4 text-center">
           <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess">
             <img src="img/StudioMofo_EtherpadIcon.png" alt="Etherpad icon" />
           </a>
@@ -54,7 +54,7 @@
             <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess">Project Process</a>
           </p>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 col-sm-4 text-center">
           <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcessTemplate">
             <img src="img/StudioMofo_EtherpadIcon.png" alt="Etherpad icon" />
           </a>
@@ -62,7 +62,7 @@
             <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcessTemplate">Project Scoping Form</a>
           </p>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 col-sm-4 text-center">
           <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica">
             <img src="img/StudioMofo_EncyclopediaBestpracticaIcon.png" alt="Wiki icon" />
           </a>
