Add 'Project Information' link to /resources; update image files for our favourites

--- a/views/resources.html
+++ b/views/resources.html
@@ -48,6 +48,9 @@
             <li>
               <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#What_are_some_external_vendors_we_use.3F"><i class="fa fa-file-text-o"></i>External vendors</a>
             </li>
+            <li>
+              <a href="https://wiki.mozilla.org/Mozilla_Foundation_Projects"><i class="fa fa-file-text-o"></i>Project Information</a>
+            </li>
           </ul>
         </div>
       </div>
