--- a/views/about.html
+++ b/views/about.html
@@ -96,7 +96,7 @@
         <div class="row favourite">
           <div class="col-md-6 col-md-offset-3">
              <p>
-              Here is Erika's <a href="https://www.dropbox.com/s/b7syopbaz3apvba/hello.jpg">very favourite picture</a>. She can't watch <a href="http://vimeo.com/31158841">this video of birds</a> without choking up just a little. And she has passed many pleasant hours with <a href="http://tonematrix.audiotool.com/">this music maker</a>. Enjoy!
+              Here is Erika's <a href="/img/erika-fav-hello.jpg">very favourite picture</a>. She can't watch <a href="http://vimeo.com/31158841">this video of birds</a> without choking up just a little. And she has passed many pleasant hours with <a href="http://tonematrix.audiotool.com/">this music maker</a>. Enjoy!
             </p>
           </div>
         </div>
