Add prioritization rubric, fix bugzilla query, change need a twee5 intake form receiver to studiomofo

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -325,6 +325,12 @@ nav#studiomofo-nav {
         border-bottom: 1px solid @body-blue;
       }
     }
+    #loading-buzilla {
+      height: 120px;
+      td {
+        border: none;
+      }
+    }
   }
 }
 
