--- a/views/about.html
+++ b/views/about.html
@@ -28,7 +28,7 @@
               You <a href="/#form-section">tell us what you need</a>.
             </li>
             <li>
-              We'll triage your request and respond ASAP.
+              We'll triage your request based on <a href="https://docs.google.com/a/mozillafoundation.org/spreadsheet/ccc?key=0AorEOP1A0tc0dHl6YVd6dU5Da0pwVlVCaG5uNWNkaVE&amp;usp=sharing#gid=8">the prioritization rubric</a> and respond ASAP.
             </li>
             <li>
               If we can accommodate your request, here is <a href="https://mofocomms.etherpad.mozilla.org/ProjectProcess?">the process we'll use</a>.
