--- a/views/projects.html
+++ b/views/projects.html
@@ -30,6 +30,7 @@
               </tr>
             </thead>
             <tbody>
+              <tr id="loading-buzilla" class="text-center"><td colspan="2"><img src="img/loader.gif" /></td></tr>
             </tbody>
           </table>
         </div>
