Fix Bug 1023628 - change link to brand assets

--- a/views/resources.html
+++ b/views/resources.html
@@ -35,7 +35,7 @@
               <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#Where_to_find_Mozilla_on_Social_Media"><i class="fa fa-file-text-o"></i>Finding Mozilla on social media</a>
             </li>
             <li>
-              <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#Where_to_find_Mozilla_Brand_Assets"><i class="fa fa-file-text-o"></i>Brand assets</a>
+              <a href="https://assets.mozilla.org/"><i class="fa fa-file-text-o"></i>Brand assets</a>
             </li>
             <li>
               <a href="https://wiki.mozilla.org/Encyclopedia_Bestpractica#Top-level_talking_points"><i class="fa fa-file-text-o"></i>Top level talking points</a>
